<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen2">

    <!--        android:onClick="clickRestart"-->

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="198dp"
        android:layout_height="80dp"
        android:text="@string/re_gen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <ImageView
        android:id="@+id/open_history"
        android:layout_width="73dp"
        android:layout_height="80dp"
        android:contentDescription="@string/go_to_hist"
        android:onClick="open_history_OnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/buttonRestart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/image_stars" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="66dp"
        android:layout_height="81dp"
        android:contentDescription="@string/return_to_start"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonRestart"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/button_back" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/apology2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/heart1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/add_to_favorites"

        android:onClick="OnClickHeart"
        app:layout_constraintBottom_toBottomOf="@+id/text1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/text1"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/heart2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/add_to_favorites"
        android:onClick="OnClickHeart"
        app:layout_constraintBottom_toBottomOf="@+id/text2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toTopOf="@+id/text2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:text="@string/apology1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ваши оправдания"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>